--- a/set/src/app/play/card/card.component.scss
+++ b/set/src/app/play/card/card.component.scss
@@ -2,9 +2,36 @@
     width: 100%;
     height: 100%;
     display: block;
+    position: absolute;
+
+    z-index: 2;
+
+    border-radius: 10px;
+    background: whitesmoke;
+
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.25);
+
+    transition: z-index 1s, box-shadow 1s, transform 1s, opacity 1s, background 1s;
+
+    transform: rotate(-45deg) translateX(-500%) translateY(-500%) scale(1.5);
 
     &.selected {
-        background: lightgray;
+        box-shadow: 2px 2px 25px rgba(0,0,0,0.5);
+        transform: rotate(3deg) scale(1.1) !important;
+        background: white;
+    }
+
+    &.placed {
+        z-index: 1;
+        transform: rotate(0deg) translateX(0) translateY(0) scale(1);
+        opacity: 1;
+    }
+
+    &.removed {
+        z-index: 10 !important;
+        transform: rotate(15deg) translateX(500%) translateY(50%) scale(1.5) !important;
+        box-shadow: 2px 2px 25px rgba(0,0,0,0.5);
+        // opacity: 0;
     }
 }
 
